--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,7 +1,7 @@
 development:
   react_cors: true
   database:
-    table: geomapping
+    table: asira_geomapping
     username: asirauser
     password: asirapass
     host: postgres_db
